# allpix

./: CMakeLists.txt  FindHerwig.cmake  FindPythia8.cmake  FindThePEG.cmake  allpix.cc  lambda_c.in  pythia_decayer_conf.in  vis.mac
include/: AllPixDetectorConstruction.hh  AllPixDetectorMessenger.hh  AllPixEventAction.hh  AllPixExtDecayerPhysics.hh  AllPixGeoDsc.hh  AllPixPhysicsList.hh  AllPixPrimaryGeneratorAction.hh  AllPixRunAction.hh  AllPixTrackerSD.hh  AllPixTrackingAction.hh  G4LambdaCDecayWithSpin.hh  G4Pythia8.hh  G4Pythia8Decayer.hh  G4Pythia8DecayerMessenger.hh  HepMCG4Herwig7Interface.hh  HepMCG4Interface.hh  HepMCG4Pythia8Interface.hh  HepMCG4Pythia8Messenger.hh
models/: pixeldetector.xml
src/: AllPixDetectorConstruction.cc  AllPixDetectorMessenger.cc  AllPixEventAction.cc  AllPixExtDecayerPhysics.cc  AllPixFEI3StandardDigitizer.cc  AllPixPhysicsList.cc  AllPixPrimaryGeneratorAction.cc  AllPixRunAction.cc  AllPixTrackerHit.cc  AllPixTrackerSD.cc  AllPixTrackingAction.cc  ExExChPhysicsList.cc  G4LambdaCDecayWithSpin.cc  G4Pythia8.cc  G4Pythia8Decayer.cc  G4Pythia8DecayerMessenger.cc  HepMCG4Herwig7Interface.cc  HepMCG4Interface.cc  HepMCG4Pythia8Interface.cc  HepMCG4Pythia8Messenger.cc  ReadGeoDescription.cc  SelDict.cc
